Self-contained support for plain dataclasses
BREAKING CHANGE: Provided types now use plain dataclasses for their
nested `Data` type. Reasons:
- Eventually this will allow to remove the hard dependency on Pydantic.
- Subclassing `SerializedData` should be less confusing for those
  familiar with dataclasses but not Pydantic.

Plain dataclasses can now be serialized without using pydantic’s dataclass
This comes with important limitations:
  - More limited set of recognized types
  - No possibility to customize serialization or validation
The main advantages are:
  - Simple dataclasses are automatically supported, without the need
    to wrap them with a Serializable type.
  - For simple applications, it is not necessary to force a dependency
    on Pydantic (although there are still advantages to doing so).
    + We use this to remove the dependency on Pydantic for our own
      packaged types.

PLANNED: Once `config` no longer depends on Pydantic, we can remove it
as a package dependency

--- a/docs/TODO
+++ b/docs/TODO
@@ -1,1 +1,3 @@
-- Document PureFunction & friends
+- [ ] Remove `ValidatingConfig`
+    - `config` should use a stdlib dataclass, which are now serializable
+- [ ] Remove hard dependency on Pydantic
